@@ -1241,6 +1241,7 @@ webcore_sources += \
 	WebCore/platform/graphics/FloatPoint3D.cpp \
 	WebCore/platform/graphics/FloatPoint3D.h \
 	WebCore/platform/graphics/FloatQuad.cpp \
+	WebCore/platform/graphics/FloatQuad.h \
 	WebCore/platform/graphics/FloatRect.cpp \
 	WebCore/platform/graphics/FloatRect.h \
 	WebCore/platform/graphics/FloatSize.cpp \
