@@ -1,5 +1,12 @@
 2008-11-12  Alp Toker  <alp@nuanti.com>
 
+        autotools build system fix-up only. Add FloatQuad.h to the source
+        lists and sort them.
+
+        * GNUmakefile.am:
+
+2008-11-12  Alp Toker  <alp@nuanti.com>
+
         Build fixes for r38346. FloatQuad.cpp is missing:
 
         1) #include "config.h"
