@@ -1,3 +1,10 @@
+2008-11-12  Alp Toker  <alp@nuanti.com>
+
+        autotools build system fix-up only. Add FloatQuad.h to the source
+        lists and sort them.
+
+        * GNUmakefile.am:
+
 2008-11-12  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
